--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>自然橙</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@2.9.3/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.30.1/min/vs/loader.js"></script>
-  <style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>自然橙</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.30.1/min/vs/loader.js"></script>
+    <style>
     html, body {
       height: 100%;
       margin: 0;
@@ -36,19 +36,26 @@
     #response-container {
       flex-grow: 1;
     }
-    #submit-btn { /* 新增 id 為 submit-btn 的按鈕 */
-      margin-top: 1rem;
+    #submit-btn {
+      height: 100%; /* 設定高度為 100% */
+      margin-left: 1rem; /* 將按鈕距離輸入框左側的距離調整為 1rem */
     }
-  </style>
+    #run-btn {
+      height: 100%; /* 設定高度為 100% */
+      margin-left: 1rem; /* 將按鈕距離上一個按鈕的距離調整為 1rem */
+    }
+  
+    </style>
 </head>
 <body>
-  <div class="container">
+<div class="container">
     <form id="question-form">
-      <textarea id="question-input" class="form-control" placeholder="Ask your question here..." rows="3"></textarea>
-      <button type="submit" class="btn btn-primary" id="submit-btn">寫吧</button> <!-- 將按鈕移到輸入框右側 -->
+        <textarea id="question-input" class="form-control" placeholder="自然講點話、電腦寫程式..." rows="3"></textarea>
+        <button type="submit" class="btn btn-primary" id="submit-btn">寫吧</button>
+        <button class="btn btn-primary" id="run-btn">跑吧</button>
     </form>
     <div id="response-container" class="w-100 h-100"></div>
-  </div>
-  <script src="./coding.js"></script>
+</div>
+<script src="./coding.js"></script>
 </body>
 </html>
