<button type="submit" class="btn btn-primary" id="submit-btn">寫吧</button>         <button class="btn btn-primary" id="run-btn">跑吧</button>

--- a/static/index.html
+++ b/static/index.html
@@ -56,6 +56,20 @@
     </form>
     <div id="response-container" class="w-100 h-100"></div>
 </div>
+<!-- 新增 modal 用來顯示 HTML 結果 -->
+<div class="modal fade" id="html-modal" tabindex="-1" aria-labelledby="html-modal-label" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="html-modal-label">HTML 結果</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <iframe id="html-iframe" class="w-100 h-100 border-0"></iframe>
+      </div>
+    </div>
+  </div>
+</div>
 <script src="./coding.js"></script>
 </body>
 </html>
