const runBtn = document.getElementById('run-btn') runBtn.addEventListener('click', async (e) => {

--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
 <div class="container">
     <form id="question-form">
         <textarea id="question-input" class="form-control" placeholder="自然講點話、電腦寫程式..." rows="3"></textarea>
-        <button type="submit" class="btn btn-primary" id="submit-btn">寫吧</button>
+        <button class="btn btn-primary" id="ask-btn">寫吧</button>
         <button class="btn btn-primary" id="run-btn">跑吧</button>
     </form>
     <div id="response-container" class="w-100 h-100"></div>
