--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
     html, body {
       height: 100%;
       margin: 0;
-      background-color: #303030; /* 將背景色改為黑灰色 */
+      background-color: #303030;
     }
     .container {
       height: 100%;
@@ -29,22 +29,17 @@
     #question-input {
       flex-grow: 1;
       margin-right: 1rem;
-      background-color: #424242; /* 將輸入框底色改為深灰色 */
-      color: #dcdcdc; /* 將字體顏色改為淺灰色 */
+      background-color: #424242;
+      color: #dcdcdc;
       resize: vertical;
     }
     #response-container {
       flex-grow: 1;
     }
-    #submit-btn {
-      height: 100%; /* 設定高度為 100% */
-      margin-left: 1rem; /* 將按鈕距離輸入框左側的距離調整為 1rem */
+    .btn {
+      height: 100%;
+      margin-right: 0.5rem;
     }
-    #run-btn {
-      height: 100%; /* 設定高度為 100% */
-      margin-left: 1rem; /* 將按鈕距離上一個按鈕的距離調整為 1rem */
-    }
-  
     </style>
 </head>
 <body>
